# meetingminutes

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-remote.txt  run.sh
.claude/: launch.json
backups/v001/: pyproject.toml
backups/v002-chat-feature/: session-notes.md
docs/: architecture.md  deployment.md  instana-genai-vllm-monitoring.md  models.md  monitoring.md  spark-k8s-migration-plan.md  tracing.md
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  pvc.yaml  searxng.yaml  secret.example.yaml  service.yaml
ops/: README.md  gpu-manager.py  gpu_manager_k8s.py
ops/eso/: README.md  clustersecretstore-vault.yaml  externalsecret-bum.yaml  externalsecret-gitlab.yaml  externalsecret-local-ai.yaml
src/local_ai/: __main__.py  app.py  auth.py  config.py  database.py  models.py  tracing.py
src/local_ai/exporters/: json_export.py  srt.py  txt.py
src/local_ai/routers/: chat.py  consolidate.py  daily.py  documents.py  email.py  exports.py  immo.py  jobs.py  notes.py  pages.py  projects.py  translate.py  websearch.py
src/local_ai/services/: _torchaudio_compat.py  companion.py  consolidator.py  diarizer.py  document_checker.py  email_digest.py  immo.py  merger.py  notes_kb.py  pipeline.py  remote_transcriber.py  style_analyzer.py  summarizer.py  text_improver.py  translator.py  websearch.py
src/local_ai/templates/: admin_users.html  base.html  chat.html  consolidate.html  (+15 more)
src/transkriptor/: __main__.py  app.py  config.py  database.py  tracing.py
static/css/: app.css
static/js/: app.js
(+31 files in other folders)
