[project]
name = "transkriptor"
version = "0.1.0"
description = "Local meeting transcription with speaker diarization and AI summaries"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.0,<1.0",
    "uvicorn[standard]>=0.38.0",
    "python-multipart>=0.0.18",
    "aiofiles>=24.1.0",
    "jinja2>=3.1.6",
    "sse-starlette>=2.3.0",
    "aiosqlite>=0.21.0",
    "pydub>=0.25.1",
    "soundfile>=0.13.1",
    "faster-whisper>=1.1.0,<2.0",
    "pyannote.audio>=3.3.0,<4.0",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "ollama>=0.6.0",
    "pydantic-settings>=2.9.0",
    "httpx>=0.28.0",
    "openai>=1.0.0",
    "traceloop-sdk>=0.34.0",
    "opentelemetry-api>=1.39.0",
    "opentelemetry-sdk>=1.39.0",
    "opentelemetry-exporter-otlp-proto-http>=1.39.0",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-instrumentation-httpx>=0.60b1",
]

[project.optional-dependencies]
mlx = [
    "mlx>=0.30.0",
    "mlx-whisper>=0.4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.0",
]

[project.scripts]
transkriptor = "transkriptor.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
